[gd_scene load_steps=20 format=3 uid="uid://sj42c366uw1o"]

[ext_resource type="Texture2D" uid="uid://fbrfpdttws05" path="res://Retina/ship_E.png" id="1_kgvir"]
[ext_resource type="Script" path="res://player.gd" id="1_qv3lv"]
[ext_resource type="Texture2D" uid="uid://51vt62hadmr0" path="res://Retina/effect_purple.png" id="1_xhwep"]
[ext_resource type="Texture2D" uid="uid://cp756mtv4mlx3" path="res://Retina/ship_G.png" id="2_p76xn"]
[ext_resource type="Texture2D" uid="uid://bkvx47idt70ii" path="res://Retina/ship_H.png" id="3_t2aag"]
[ext_resource type="Texture2D" uid="uid://c1hpldedq50fg" path="res://Retina/ship_J.png" id="4_8ivj6"]
[ext_resource type="Texture2D" uid="uid://db24etvcf5cu6" path="res://Retina/ship_L.png" id="5_5m7tf"]
[ext_resource type="Texture2D" uid="uid://4uc8ahoct2ow" path="res://Retina/ship_sidesA.png" id="6_4rpfb"]
[ext_resource type="Texture2D" uid="uid://b2imyioly3p8b" path="res://Retina/ship_sidesB.png" id="7_vsvc3"]
[ext_resource type="Texture2D" uid="uid://bwd13cvaqr5b2" path="res://Retina/ship_sidesC.png" id="8_kg2tw"]
[ext_resource type="PackedScene" uid="uid://dkrsde2arvnlv" path="res://star_particles.tscn" id="11_qadj8"]
[ext_resource type="FontFile" uid="uid://bfpopxhv6prlu" path="res://Transformers Movie.ttf" id="12_x5b46"]
[ext_resource type="Texture2D" uid="uid://bcfal2xpik7gd" path="res://BTNS'/Header.png" id="13_3e1dw"]
[ext_resource type="Texture2D" uid="uid://caipxkok3n637" path="res://BTNS'/Table.png" id="13_itx5c"]
[ext_resource type="Texture2D" uid="uid://i4bnj2rgwo8" path="res://BTNS'/exitRight.png" id="14_xhpia"]
[ext_resource type="Texture2D" uid="uid://drmfm5me5j0s" path="res://BTNS'/return.png" id="15_vrot1"]
[ext_resource type="AudioStream" uid="uid://dlysjs2yp08pq" path="res://SFX/boost.mp3" id="17_fjdpm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bg2wg"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2mgnn"]

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("score_label", "highscore_label", "highscore_label2")]
scale = Vector2(0.5, 0.5)
collision_mask = 2
script = ExtResource("1_qv3lv")
score_label = NodePath("CanvasLayer/RichTextLabel")
highscore_label = NodePath("CanvasLayer/Highscoretext")
highscore_label2 = NodePath("CanvasLayer/LooseScreen/Highscoretext2")

[node name="Booster" type="Sprite2D" parent="."]
position = Vector2(0, 72.6)
scale = Vector2(0.7, 0.7)
texture = ExtResource("1_xhwep")

[node name="p1" type="Sprite2D" parent="."]
texture = ExtResource("1_kgvir")

[node name="p2" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("2_p76xn")

[node name="p3" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("3_t2aag")

[node name="p4" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("4_8ivj6")

[node name="p5" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("5_5m7tf")

[node name="p6" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("6_4rpfb")

[node name="p8" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("7_vsvc3")

[node name="p7" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("8_kg2tw")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="starParticles" parent="." instance=ExtResource("11_qadj8")]
process_mode = 3

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer"]
offset_left = 438.14
offset_top = 32.29
offset_right = 714.14
offset_bottom = 72.29
scale = Vector2(1.27, 1.27)
theme_override_fonts/normal_font = ExtResource("12_x5b46")
scroll_active = false
autowrap_mode = 0

[node name="Highscoretext" type="RichTextLabel" parent="CanvasLayer"]
offset_left = 31.7
offset_top = 33.01
offset_right = 307.7
offset_bottom = 73.01
scale = Vector2(1.27, 1.27)
theme_override_fonts/normal_font = ExtResource("12_x5b46")
scroll_active = false
autowrap_mode = 0

[node name="LooseScreen" type="Node2D" parent="CanvasLayer"]
process_mode = 3

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/LooseScreen"]
offset_left = -184.0
offset_top = -131.0
offset_right = 1330.0
offset_bottom = 758.0
color = Color(0, 0, 0, 1)

[node name="Retry" type="Button" parent="CanvasLayer/LooseScreen"]
process_mode = 3
offset_left = 487.0
offset_top = 239.0
offset_right = 595.0
offset_bottom = 347.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_bg2wg")
icon = ExtResource("15_vrot1")
flat = true

[node name="Exit" type="Button" parent="CanvasLayer/LooseScreen"]
process_mode = 3
offset_left = 487.0
offset_top = 379.0
offset_right = 595.0
offset_bottom = 487.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_2mgnn")
icon = ExtResource("14_xhpia")
flat = true

[node name="Table" type="Sprite2D" parent="CanvasLayer/LooseScreen"]
position = Vector2(550, 143.15)
scale = Vector2(1.495, 1.495)
texture = ExtResource("13_itx5c")

[node name="Header" type="Sprite2D" parent="CanvasLayer/LooseScreen"]
position = Vector2(548, 140)
texture = ExtResource("13_3e1dw")

[node name="Highscoretext2" type="RichTextLabel" parent="CanvasLayer/LooseScreen"]
offset_left = 363.0
offset_top = 574.0
offset_right = 639.0
offset_bottom = 614.0
scale = Vector2(2.58, 2.58)
theme_override_fonts/normal_font = ExtResource("12_x5b46")
scroll_active = false
autowrap_mode = 0

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(0, -50, -56, 37, -17, 37, 0, 49, 17, 37, 56, 37)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
process_mode = 1
stream = ExtResource("17_fjdpm")
volume_db = -1.0
pitch_scale = 0.5
area_mask = 2
parameters/looping = false

[connection signal="pressed" from="CanvasLayer/LooseScreen/Retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="CanvasLayer/LooseScreen/Exit" to="." method="_on_exit_pressed"]
